# NewIO

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/dmotion/: test_servo
devel/lib/pkgconfig/: dmotion.pc
devel/share/dmotion/cmake/: dmotionConfig.cmake
src/dconfig/: CMakeLists.txt  package.xml
src/dconfig/test/1/dbehavior/: move.yml
src/dconfig/test/1/dmotion/: kick.yml  motion.yml
src/dconfig/test/1/dvision/: amcl.yml
src/dconfig/test/dmotion/: motor.yml
src/dconfig/test/dvision/: misc.yml
src/dmotion/: CMakeLists.txt  package.xml
src/dmotion/config/: global.yml
src/dmotion/config/1/dbehavior/: move.yml
src/dmotion/config/1/dmotion/: motion.yml  motor.yml
src/dmotion/config/1/dvision/: localization.yml  misc.yml
src/dmotion/config/2/dbehavior/: move.yml
src/dmotion/config/2/dmotion/: fastkick.yml  kick.yml  motion.yml  motor.yml
src/dmotion/config/2/dvision/: VID5.xml  camera.yml  localization.yml  misc.yml
src/dmotion/config/4/dmotion/: fastkick.yml  kick.yml  motion.yml  motor.yml  setup.yml
src/dmotion/config/4/dvision/: amcl.yml  camera.yml  localization.yml  misc.yml
src/dmotion/config/bak/1/dmotion/: motor.yml
src/dmotion/config/bak/1/dvision/: amcl.yml  camera.yml
src/dmotion/config/test/1/dmotion/: goalie.yml  motor.yml  setup.yml
src/dmotion/config/test/1/dvision/: camera.yml  localization.yml
src/dmotion/config/test/dmotion/: goalie.yml  kick.yml  motion.yml  motor.yml  setup.yml
src/dmotion/config/test/dvision/: default.xml
src/dmotion/example/IOManager_read_write/: CMakeLists.txt
src/dmotion/example/IOManager_test/: IOManager_read_write.cpp  power_test.cpp
src/dmotion/example/feetsensor_test/: feetsensor_test.cpp
src/dmotion/example/imu_test/: CMakeLists.txt  imu_test.cpp
src/dmotion/example/my_place/: imu_follow_test.cpp
src/dmotion/example/servo_read/: CMakeLists.txt  servo_read.cpp
src/dmotion/example/servo_test/: servo_read.cpp
src/dmotion/example/servo_write/: CMakeLists.txt  servo_write.cpp
src/dmotion/example/test/: FeetSensor_test.cpp  circle.cpp  climb_read.cpp  climb_write.cpp  filter_test.cpp  fucking_test.cpp  math_test.cpp  motion_io_test.cpp  power_read.cpp  pr_demo.cpp  state_test.cpp  test_servo.cpp
src/dmotion/example/vicon_test/: vicon_test_walk_straight.cpp
src/dmotion/include/dmotion/Common/: Common.h  DThread.hpp  EigenTypes.h  MotionData.hpp  MotionShareData.hpp  Parameters.h  Type.h  VecPos.hpp  fast_math.hpp
src/dmotion/include/dmotion/Common/Utility/: Log.h  Math.hpp  RosUtility.hpp  Timer.hpp  Utility.h
src/dmotion/include/dmotion/ForwardKinematics/: ForwardKinematics.h
src/dmotion/include/dmotion/IO/: FeetSensorIO.h  IMUReader.h  IOManager2.h  IOManager3.h  IOManagerBase.h  ServoIO.h
src/dmotion/include/dmotion/IO/dynamixel_sdk/: group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  protocol1_packet_handler.h  protocol2_packet_handler.h
src/dmotion/include/dmotion/IOCommunication/: IOCommunication.h
src/dmotion/include/dmotion/InverseKinematics/: InverseKinematics.h
src/dmotion/include/dmotion/OneFootLanding/: OneFootLanding.h
src/dmotion/include/dmotion/PendulumWalk/: PendulumWalk.h
src/dmotion/include/dmotion/State/: IMUFilter.hpp  Odometer.h  RobotStatus.hpp  StateManager.hpp  imu_filter.hpp  imu_filter_new.hpp  stateless_orientation.hpp
src/dmotion/include/dmotion/ThreeInterpolation/: ThreeInterpolation.h
src/dmotion/include/dmotion/Utility/: dmotion_math.hpp
src/dmotion/launch/: .power_test.launch.swp  1.launch  2.launch  3.launch  4.launch  5.launch  6.launch  IOManager_read_write.launch  climb_read.launch  climb_write.launch  default.launch  feetsensor_test.launch  filter_test.launch  fucking_test.launch  imu_follow_test.launch  imu_test.launch  motion_io.launch  power_test.launch  pr_demo.launch  servo_read.launch  servo_write.launch  state_test.launch  test_circle.launch  test_servo.launch
src/dmotion/launch/vicon_test/: vicon.launch
src/dmotion/scripts/: PositiveKinematics.py
src/dmotion/src/: main.cpp
src/dmotion/src/Common/: CMakeLists.txt  MotionData.cpp  Parameters.cpp  VecPos.cpp
src/dmotion/src/ForwardKinematics/: CMakeLists.txt  ForwardKinematics.cpp
src/dmotion/src/IO/: CMakeLists.txt  FeetSensorIO.cpp  IMUReader.cpp  IOManager2.cpp  IOManager3.cpp  ServoIO.cpp
src/dmotion/src/IO/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/dmotion/src/IOCommunication/: COPY.cpp  IOCommunication.cpp
src/dmotion/src/InverseKinematics/: CMakeLists.txt  InverseKinematics.cpp
src/dmotion/src/Node/: MotionIO.cpp
src/dmotion/src/OneFootLanding/: CMakeLists.txt  OneFootLanding.cpp  OneFootLanding.h
src/dmotion/src/PendulumWalk/: CMakeLists.txt  PendulumWalk.cpp
src/dmotion/src/State/: CMakeLists.txt  IMUFilter.cpp  Odometer.cpp  RobotStatus.cpp  StateManager.cpp  imu_filter.cpp  imu_filter_new.cpp  stateless_orientation.cpp
src/dmotion/src/ThreeInterpolation/: CMakeLists.txt  ThreeInterpolation.cpp
src/dmotion/src/test/: CMakeLists.txt  test_servo.cpp
test_data/test1/: ax.txt  ay.txt  az.txt  output.m  pitch.txt  roll.txt  time.txt  wx.txt  wy.txt  wz.txt  yaw.txt
udev/: 99-dancer-serial.rules  change_timer.sh
