<?xml version="1.0"?>
<package>
    <name>dmotion</name>
    <version>0.0.0</version>
    <description>motion framework</description>
    <maintainer email="pyx@gg.gg">Yuxiang Peng</maintainer>
    <author email="pyx@gg.gg">Yuxiang Peng</author>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>dmsgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>dcommon</run_depend>
</package>
